2013-11-14  6.8.7-6 Cristy  <quetzlzacatenango@image...>
  * Fix possible memory corruption when writing PSD images (bug report from
    Justin Grant).

2013-11-08  6.8.7-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.7-5, SVN revision 13682.

2013-11-03  6.8.7-5 Cristy  <quetzlzacatenango@image...>
  * The jpeg:extent option no longer returns double-free exception (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24366).
  * Turn off arch-specific optimisations (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24353).
  * The -type bilevel option no longer returns black image (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24394).

2013-11-03  6.8.7-5 Dirk Lemstra <dirk@snakeware...>
  * Added support for pangocairo to the windows distribution.
  * Added /OpenCL option to configure.exe to enable OpenCL.

2013-10-31  6.8.7-5 Glenn Randers-Pehrson <glennrp@image...>
  * Fixed cut-and-paste error in version.c that caused the "png" delegate
    to be listed twice by the "convert -version" command.

2013-10-30  6.8.7-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.7-4, SVN revision 13616.

2013-10-26  6.8.7-4  Siu Chi Chan <...@amd.com>
  * Major improvements to the OpenCL infrastructure.
  * New OpenCL accelerated algorithms (function image, blur, radial blur,
    unsharp mask, resize, contrast, equalize, despeckle).
  * Added a new checkbox to enable OpenCL in the configure program.

2013-10-24  6.8.7-4 Cristy  <quetzlzacatenango@image...>
  * Color reduction acceleration from Yoya (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=24324).
  * -intensity rec709luma -colorspace gray returns gamma 1.0/2.2 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24330).
  * Handle 16-bit JPEG-comrpessed TIFF images (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24331).